test/corpus/check_host_ip.txt
==================
check host IP = yes
==================

CheckHostIP yes

---

(client_config
  (check_host_ip
    (check_host_ip_value)))

==================
check host IP = Yes
==================

CheckHostIP Yes

---

(client_config
  (check_host_ip
    (check_host_ip_value)))

==================
check host IP = true
==================

CheckHostIP true

---

(client_config
  (check_host_ip
    (check_host_ip_value)))

==================
check host IP = True
==================

CheckHostIP True

---

(client_config
  (check_host_ip
    (check_host_ip_value)))

==================
check host IP = no
==================

CheckHostIP no

---

(client_config
  (check_host_ip
    (check_host_ip_value)))

==================
check host IP = No
==================

CheckHostIP No

---

(client_config
  (check_host_ip
    (check_host_ip_value)))

==================
check host IP = false
==================

CheckHostIP false

---

(client_config
  (check_host_ip
    (check_host_ip_value)))

==================
check host IP = False
==================

CheckHostIP False

---

(client_config
  (check_host_ip
    (check_host_ip_value)))

==================
use irregular casing
==================

CheCKhostIP yes

---

(client_config
  (check_host_ip
    (check_host_ip_value)))

==================
can use equals sign
==================

CheckHostIP=yes

---

(client_config
  (check_host_ip
    (check_host_ip_value)))

==================
can use equals sign with whitespace
==================

CheckHostIP = yes

---

(client_config
  (check_host_ip
    (check_host_ip_value)))

==================
can be specified after host
==================

Host example.com
  CheckHostIP no

---

(client_config
  (host
    (host_value))
  (check_host_ip
    (check_host_ip_value)))

==================
detect invalid values
==================

CheckHostIP ja

---

(client_config
  (ERROR
    (UNEXPECTED 'j')))

==================
requires whitespace after key
==================

CheckHostIP"yes"

---

(client_config
  (ERROR))
