test/corpus/ciphers.txt
==================
specify ciphers to use
==================

Ciphers some-algo

---

(client_config
  (ciphers
    (ciphers_value)))

==================
remove cipher from list
==================

Ciphers -some-other

---

(client_config
  (ciphers
    (ciphers_value)))

==================
add cipher to list
==================

Ciphers +some-other

---

(client_config
  (ciphers
    (ciphers_value)))

==================
use irregular casing
==================

cIPhErs some-algo

---

(client_config
  (ciphers
    (ciphers_value)))

==================
can use equals sign
==================

Ciphers=some-algo

---

(client_config
  (ciphers
    (ciphers_value)))

==================
can use equals sign with whitespace
==================

Ciphers = some-algo

---

(client_config
  (ciphers
    (ciphers_value)))

==================
can use equals sign with whitespace and quotes
==================

Ciphers = "some-algo"

---

(client_config
  (ciphers
    (ciphers_value)))

==================
can use tab character
==================

Ciphers	"some-algo"

---

(client_config
  (ciphers
    (ciphers_value)))

==================
can be specified after host
==================

Host example.com
  Ciphers some-algo

---

(client_config
  (host
    (host_value))
  (ciphers
    (ciphers_value)))

==================
requires whitespace after key
==================

Ciphers"some-algo"

---

(client_config
  (ERROR
    (UNEXPECTED 'o')))
